Add download file API
